# cvfinal

./: README.md
Part 5.1/Requirements_file/: Project1.md  Project1_content_list.json  Project1_content_list_v2.json  Project1_middle.json  Project1_model.json
Part 5.1/baseline/: baseline_part1.py
Part5_1/baseline/: README.md
Part5_1/checkpoints/: srcnn_x4_self_trained.pth
Part5_2/: README.md  pyproject.toml  requirements.txt
Part5_2/src/part5_2/: __init__.py  datasets.py  decode_wild_video.py  download_weights.py  evaluate.py  image_io.py  inference_options.py  metrics.py  run_inference.py  temporal_metrics.py  video_io.py  visualize.py  weights.py
Part5_2/src/part5_2/models/: __init__.py  arch_util.py  basicvsr.py  iconvsr.py  realesrgan.py
Part5_2/tests/: test_metrics.py
Part5_3/: README.md  pyproject.toml  requirements.txt
Part5_3/src/part5_3/: __init__.py  constants.py  datasets.py  download_models.py  evaluate.py  image_io.py  metrics.py  pipeline.py  run_inference.py  temporal_consistency.py  temporal_metrics.py  tiling.py  train_lora_reds.py  video_io.py  visualize.py
Part5_3/tests/: test_part5_3.py
Part5_3B/: README.md  pyproject.toml  requirements.txt
Part5_3B/src/part5_3_da/: __init__.py  constants.py  datasets.py  evaluate.py  flow_matching.py  image_io.py  metrics.py  pipeline.py  run_inference.py  temporal_consistency.py  tiling.py  train.py  unet.py  visualize.py
Part5_3B/tests/: test_part5_3_da.py
Part_5_1/baseline/: README.md
SRCNN/: README.md  video.py  video_hr.py
