[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "part5-2-vsr"
version = "0.1.0"
description = "Part 5.2 SOTA reproduction pipelines for BasicVSR, IconVSR, and Real-ESRGAN."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
