[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "part5-3-sd-controlnet-tile"
version = "0.1.0"
description = "Part 5.3 diffusion-based consistent video enhancement with Stable Diffusion, ControlNet-Tile, and REDS LoRA."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
