[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "part5-3-da-flow-matching"
version = "0.1.0"
description = "Part 5.3 Direction A: Flow Matching based generative video super-resolution."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
